--- a/timekeepercore/nbproject/project.properties
+++ b/timekeepercore/nbproject/project.properties
@@ -24,7 +24,7 @@ javac.classpath=\
     ${file.reference.jdo.jar}:\
     ${file.reference.jdori.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=-nowarn
+javac.compilerargs=-nowarn -target 1.5
 javac.deprecation=false
 javac.source=1.5
 javac.target=1.5
