--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res.properties
@@ -191,7 +191,7 @@ Stop_action=Stop action
 
 Exit_from_application=Exit from application
 
-Print=Print
+Print=Reporting
 
 Import_a_workspace_from_external_file=Import a workspace from external file
 
@@ -219,7 +219,7 @@ Running_status=Running status
 
 Dialog=Dialog
 
-Print_(Ctrl+P)=Print (Ctrl+P)
+Print_(Ctrl+P)=Reporting (Ctrl+P)
 
 Paste_(Ctrl+V)=Paste (Ctrl+V)
 
@@ -371,7 +371,7 @@ Application=Application
 /MainMenu/MenuItem/Show_actions=View action list
 /MainMenu/MenuItem/Show_charts=View charts
 
-/MainMenu/MenuItem/Show_chats_ghost_on_actions_table=Show chart ghost on actions table
+/MainMenu/MenuItem/Show_chats_ghost_on_actions_table=Show chart shadow
 
 MainWindow/MainContentsTabbedPane/TabTitle/Actions=Actions
 
@@ -425,7 +425,7 @@ GeneralChoice/PasteMode/before=before
 
 GeneralChoice/PasteMode/after=after
 
-ReportDialog/LaunchButton/Confirm=Confirm
+ReportDialog/LaunchButton/Confirm=Ok
 
 ReportDialog/LaunchButton/Cancel=Cancel
 
