Supporto alla notifica tramite dialog Swing di eventiche prima rimanevano negli stream predefiniti di sistema

--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res.properties
@@ -466,3 +466,11 @@ SystemTray/InfoMesage/Message/Idle_15_minutes=15 minutes have gone without any j
 SystemTray/InfoMesage/Title/Idle_15_minutes=Reminder
 
 TrayIcon/Tooltip/Pause_on_task=Idle on {0}
+
+Launcher/ErrorMessage/DuplicatedAppInstance/Row1=A live instance of the application was detected.
+
+Launcher/ErrorMessage/DuplicatedAppInstance/Row2=Please check if you have launched another instance of the application, or if a previous launch has left a zombie process.
+
+Launcher/ErrorMessage/DuplicatedAppInstance/Row3=Anyhow this application instance is going to be closed.
+
+Launcher/ErrorMessage/AWTUnavailable=Cannot initialize the graphic environment.
