--- a/common/nbproject/project.properties
+++ b/common/nbproject/project.properties
@@ -16,10 +16,10 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/common.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-file.reference.jhall.jar=../common-libs/jhall.jar
+file.reference.jh.jar=../common-libs/jh.jar
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jhall.jar}
+    ${file.reference.jh.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-target 1.5
 javac.deprecation=false
