--- a/timekeeperlight/nbproject/project.properties
+++ b/timekeeperlight/nbproject/project.properties
@@ -27,7 +27,7 @@ file.reference.jasperreports-1.2.8.jar=lib/jasperreports-1.2.8.jar
 file.reference.jdo.jar=../common-libs/jdo.jar
 file.reference.jdom.jar=lib/jdom.jar
 file.reference.jdori.jar=../common-libs/jdori.jar
-file.reference.jhall.jar=../common-libs/jhall.jar
+file.reference.jh.jar=../common-libs/jh.jar
 file.reference.jsci-core.jar=../common-libs/jsci-core.jar
 file.reference.jsci-xtra.jar=../common-libs/jsci-xtra.jar
 file.reference.looks-2.1.4.jar=lib/looks-2.1.4.jar
@@ -51,7 +51,6 @@ javac.classpath=\
     ${file.reference.org-openide-awt.jar}:\
     ${file.reference.jdo.jar}:\
     ${file.reference.jdori.jar}:\
-    ${file.reference.jhall.jar}:\
     ${file.reference.org-openide-util.jar}:\
     ${file.reference.swingx-2006_10_27.jar}:\
     ${reference.timekeeperlight-icons.jar}:\
@@ -61,7 +60,8 @@ javac.classpath=\
     ${file.reference.jsci-xtra.jar}:\
     ${file.reference.itext-1.3.1.jar}:\
     ${file.reference.poi-2.0-final-20040126.jar}:\
-    ${reference.common-charts.jar}
+    ${reference.common-charts.jar}:\
+    ${file.reference.jh.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-nowarn -target 1.5
 javac.deprecation=false
