--- a/common/nbproject/project.properties
+++ b/common/nbproject/project.properties
@@ -43,7 +43,7 @@ javadoc.windowtitle=
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
+platform.active=SUN_JDK_1.5
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
