--- a/timekeeperlight-icons/nbproject/project.properties
+++ b/timekeeperlight-icons/nbproject/project.properties
@@ -19,7 +19,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 jar.compress=false
 javac.classpath=
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-target 1.5
 javac.deprecation=false
 javac.source=1.5
 javac.target=1.5
@@ -39,7 +39,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
+platform.active=SUN_JDK_1.5
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
