--- a/timekeeperlight/nbproject/project.properties
+++ b/timekeeperlight/nbproject/project.properties
@@ -86,7 +86,7 @@ main.class=com.davidecavestro.timekeeper.Launcher
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 no.dependencies=true
-platform.active=default_platform
+platform.active=SUN_JDK_1.5
 project.common=../common
 project.common-charts=../common-charts
 project.timekeeper-reports=../timekeeper-reports
