--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res.properties
@@ -461,7 +461,7 @@ TrayIcon/MenuItem/Label/Exit=Exit
 
 TrayIcon/MenuItem/Label/Show=Show
 
-SystemTray/InfoMesage/Message/Idle_15_minutes=15 minutes have gone without any job tracking\!
+SystemTray/InfoMesage/Message/Idle_15_minutes=15 minutes gone with no job trackings\!
 
 SystemTray/InfoMesage/Title/Idle_15_minutes=Reminder
 
@@ -469,8 +469,10 @@ TrayIcon/Tooltip/Pause_on_task=Idle on {0}
 
 Launcher/ErrorMessage/DuplicatedAppInstance/Row1=A live instance of the application was detected.
 
-Launcher/ErrorMessage/DuplicatedAppInstance/Row2=Please check if you have launched another instance of the application, or if a previous launch has left a zombie process.
+Launcher/ErrorMessage/DuplicatedAppInstance/Row2=Please check if another instance of the application is running, or a previous launch has left a zombie process (use the Task Manager).
 
 Launcher/ErrorMessage/DuplicatedAppInstance/Row3=Anyhow this application instance is going to be closed.
 
 Launcher/ErrorMessage/AWTUnavailable=Cannot initialize the graphic environment.
+
+About/System/HostButton/tooltip=Show application settings
