--- a/timekeepercore/nbproject/project.properties
+++ b/timekeepercore/nbproject/project.properties
@@ -46,7 +46,7 @@ javadoc.windowtitle=
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
+platform.active=SUN_JDK_1.5
 project.common=../common
 reference.common.jar=${project.common}/dist/common.jar
 run.classpath=\
